Switch to min-height to fix issue on mobile too

--- a/client/layout/masterbar/oauth-client.scss
+++ b/client/layout/masterbar/oauth-client.scss
@@ -363,7 +363,7 @@
 
 .woo {
 	background: #e6e6e6;
-	height: 100%;
+	min-height: 100%;
 
 	.masterbar__oauth-client {
 		background-color: #fff;
